# liflf-projet-2017

./: .gitignore  README.md  ndet
Documentation/: _accept_8cpp.html  _to_graph_8cpp.html  dir_1401aec7cf120864548a2a122040155c.html  files.html  globals.html  globals_func.html  index.html
src/: Accept.cpp  Accept.h  CMakeLists.txt  Determinize.cpp  Determinize.h  Equivalence.cpp  Equivalence.h  FA_main.cpp  FA_types.h  Minimize.cpp  ToGraph.cpp
